# tsclient

./: Cargo.toml
from_scratch/: Cargo.toml
from_scratch/src/: lib.rs
macros/typescript/: Cargo.toml
macros/typescript/src/: inner.rs  lib.rs
spec-test/: Cargo.toml
spec-test/src/: lib.rs  testes.rs
spec-test/test/api/api/: client.ts  test.ts
spec-test/test/api/api/test/deep/and/: nested.ts
spec-test/test/api/dto/: Abilities.ts  Ability.ts  Group.ts  Option.ts  Option1.ts  Option2.ts  Result.ts  Result1.ts  Result2.ts  Role.ts  Test.ts  Test2.ts  Test3.ts  UserInfo.ts
src/: api.rs  api_router.rs  errors.rs  lib.rs  prelude.rs  routing.rs  utils.rs
src/axum/: mod.rs  routing.rs
src/types/: builder.rs  mod.rs  model.rs
src/types/impls/: json.rs  macros.rs  mod.rs  router.rs
src/types/impls/chrono/: mod.rs
src/types/impls/std/: mod.rs
