workspace = { members = ["macros/typescript", "spec-test"] }
[package]
name = "tsclient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = {version = "1.0", features = ["derive"]}
axum = "0.6"
tower-service = "0.3"
tower-layer = "0.3"
typescript = {path = "./macros/typescript" }
once_cell = "1.19"
regex = "1.10"

chrono = { version = "0.4", features = ["serde"] }

[features]

